terraform/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.senchuknazar123.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app1-service
                port:
                  number: 5678
